[package]
name = "partyarty"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
description = "PartyArty - A Pseudo-Real-Time Ray Tracer"

[dependencies]
cgmath = "0.16.1"
clap = "2.32.0"
failure = "0.1.2"
minifb = "0.10.7"
specs = "0.12.3"

[lib]
name = "partyarty"
path = "src/lib.rs"

[[bin]]
name = "partyarty"
path = "src/main.rs"
