[package]
name = "partyarty"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
description = "PartyArty - A Pseudo-Real-Time Ray Tracer"

[dependencies]
clap = "2.33.3"
failure = "0.1.8"
glam = "0.9.4"
hibitset = "0.6.3"
image = "0.23.9"
rayon = "1.4.0"
sdl2 = "0.34.3"
specs = "0.16.1"
thread_local = "1.0.1"

[dependencies.rand]
version = "0.7.3"
features = ["small_rng"]

[lib]
name = "partyarty"
path = "src/lib.rs"

[[bin]]
name = "partyarty"
path = "src/main.rs"
